--- a/MPI/MPI.vcxproj
+++ b/MPI/MPI.vcxproj
@@ -146,11 +146,11 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MPITest.cpp" />
-    <ClCompile Include="Utilities.cpp" />
+    <ClCompile Include="MPIUtilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MPITest.h" />
-    <ClInclude Include="Utilities.h" />
+    <ClInclude Include="MPIUtilities.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
